--- a/data-util.cabal
+++ b/data-util.cabal
@@ -1,5 +1,5 @@
 Name:                data-util
-Version:             0.1.1
+Version:             0.2
 Synopsis:            utilities for handle data
 Description:         utilities for handle data
 Homepage:            https://github.com/cutsea110/data-util
@@ -9,9 +9,13 @@ Author:              Katsutoshi Itoh
 Maintainer:          cutsea110@gmail.com
 Category:            Data, Development, Utils
 Build-type:          Simple
--- Extra-source-files:  
-Cabal-version:       >=1.2
+Cabal-version:       >=1.6
+
+Source-Repository head
+  type:              git
+  location:          http://github.com/cutsea110/data-util
+
 Library
   Exposed-modules:     Data.Util, Data.Util.Size
   Build-depends:       
-                     base >= 4.2 && < 4.4
+                     base >= 4.2 && < 4.6
